<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>state_estimation</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="winston.h.chou@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>tf2_ros_py</depend>

  <depend>python3-numpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
